# AuthPI

./: LICENSE  LICENSE.md  README.md  config.py  main.py  pyproject.toml
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: 01_BUG_REPORT.md  config.yml
.github/workflows/: test.yml
database/: __init__.py
docs/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  SECURITY.md
models/: __init__.py  application.py  resource.py  user.py  userpool.py
models/oidc/: payloads.py  scope.py
routers/auth/: __init__.py
routers/auth/oidc/: __init__.py  authentication.py
routers/management/: __init__.py  application.py  user.py  userpool.py
templates/: auth.html
tests/: conftest.py  test_utils.py
tests/test_management/: test_application.py  test_user.py  test_userpool.py
utils/: database.py  test.py
utils/auth/: token.py
utils/dependencies/: application.py  management.py
utils/security/: crypto.py
